2006-08-23  Hans Rakers <hans at parse dot nl>

	* Fixes for tickets #157 and #164

2006-08-06  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix stupid bug (#159)
        * Handle returning null instead of array (#156)

2006-08-03  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * zend_do_inheritance can't be called with TSRMLS_CC when using 
          php 4, this also means that eAccelerator won't work with threading!
        * ea_info and ea_dasm: if eaccelerator_mm_instance is NULL, just return
          null and don't do something.

2006-07-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Don't use our own hash function, the one from the ZE is extremely much
          faster and provides a much better distribution.
        * Don't compile the user cache code one no feature is being compiled.
        * A big cleanup in struct naming
        * Move some functions around to make more of them static, this reduces
          the binary size and load times.
        * Remove some leftovers from restoring encoded scripts which only create
          overhead without the loader.
        * Clean up the session handler, removed old code for php < 4.3. 
        * Fixed detection of SysV IPC shared memory and made anonymous mmap 
          the first selected type. This makes the behaviour of rc1 the 
          default. anonymous mmap doens't have the problem of shmmax. SysVIPC is 
          still available!
        * Fixed some of the detection test in the configure script that probably
          never worked.

2006-07-29  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Use php realpath directly without wrapper, TSRM implements the realpath cache

2006-07-28  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Restore the class entry of zend_property_info when using php 5.2, this fixes bug #151

2006-07-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
