@@ -1,3 +1,8 @@
+2006-08-29  Hans Rakers <hans at parse dot nl>
+
+	* Skip disk cache creation and clean/clear actions when operating in
+	  shm_only mode. This fixes ticket #165
+
 2006-08-23  Hans Rakers <hans at parse dot nl>
 
 	* Fixes for tickets #157 and #164
